--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "type:check": "tsc --skipLibCheck --noEmit"
   },
   "dependencies": {
-    "@fseehawer/react-circular-slider": "^2.7.0",
+    "antd": "^5.21.6",
     "clsx": "^2.1.1",
     "jotai": "^2.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-slider": "^2.0.6",
     "tone": "^15.0.4"
   },
   "devDependencies": {
@@ -24,7 +23,6 @@
     "@parcel/transformer-typescript-tsc": "^2.12.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@types/react-slider": "^1.3.6",
     "parcel": "^2.12.0",
     "prettier": "^3.3.3",
     "prettier-plugin-packagejson": "^2.5.3",
